HW2/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: beschastnovsaiotcndhw2
  labels:
    app: back_end
spec:
  containers:
    - name: backend
      image: farank338/iot_cnd_hw2
      ports:
        - containerPort: 8080
    - name: database
      image: postgres:latest
