HW2/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-service
  selector:
    app: backend-service
  ports:
    - name: backend-service
      protocol: TCP
      port: 8080
      targetPort: 8080
