HW2/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
spec:
  selector:
    app: database
  ports:
    - name: postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
